[package]
name = "ras-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ras_service = {version="*", features=["Authentication"]}
serde = {version = "1.0.0", features = ["derive"]}
serde_json = "1.0.0"